--- a/kworking.ipynb
+++ b/kworking.ipynb
@@ -855,17 +855,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2019-11-06 10:52:24 starting get_column_values_stats\n",
-      "2019-11-06 10:52:24 ending get_column_values_stats ; time: 0:00:00.070400\n"
-     ]
-    },
     {
      "data": {
       "text/html": [
@@ -888,11 +880,11 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>dtype</th>\n",
-       "      <th>num_rows_values</th>\n",
-       "      <th>num_rows_missing</th>\n",
-       "      <th>pct_rows_missing</th>\n",
-       "      <th>num_uniques</th>\n",
-       "      <th>unique_values</th>\n",
+       "      <th>row_values</th>\n",
+       "      <th>rows_missing</th>\n",
+       "      <th>pct_missing</th>\n",
+       "      <th>nuniques</th>\n",
+       "      <th>uniques</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>cols</th>\n",
@@ -906,39 +898,113 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>propertylandusedesc</th>\n",
-       "      <td>object</td>\n",
+       "      <th>bathroomcnt</th>\n",
+       "      <td>float64</td>\n",
        "      <td>77381</td>\n",
        "      <td>0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>22</td>\n",
+       "      <td>[3.5, 1.0, 2.0, 3.0, 0.0, 2.5, 4.5, 4.0, 5.0, ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>bedroomcnt</th>\n",
+       "      <td>float64</td>\n",
+       "      <td>77381</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>16</td>\n",
+       "      <td>[4.0, 2.0, 3.0, 0.0, 6.0, 5.0, 1.0, 7.0, 8.0, ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>calculatedbathnbr</th>\n",
+       "      <td>float64</td>\n",
+       "      <td>76772</td>\n",
+       "      <td>609</td>\n",
+       "      <td>0.007870</td>\n",
+       "      <td>21</td>\n",
+       "      <td>[3.5, 1.0, 2.0, 3.0, nan, 2.5, 4.5, 4.0, 5.0, ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>calculatedfinishedsquarefeet</th>\n",
+       "      <td>float64</td>\n",
+       "      <td>77185</td>\n",
+       "      <td>196</td>\n",
+       "      <td>0.002533</td>\n",
+       "      <td>4972</td>\n",
+       "      <td>[3100.0, 1465.0, 1243.0, 2376.0, 1312.0, 1492....</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>propertylandusetypeid</th>\n",
+       "      <td>category</td>\n",
+       "      <td>77381</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>13</td>\n",
+       "      <td>[261.0, 266.0, 246.0, 260.0, 269.0, ..., 31.0,...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>propertylandusedesc</th>\n",
+       "      <td>category</td>\n",
+       "      <td>77381</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.000000</td>\n",
        "      <td>13</td>\n",
        "      <td>[Single Family Residential, Condominium, Duple...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>transactions</th>\n",
+       "      <td>category</td>\n",
+       "      <td>77381</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>3</td>\n",
+       "      <td>[1, 2, 3]\n",
+       "Categories (3, int64): [1, 2, 3]</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                      dtype  num_rows_values  num_rows_missing  \\\n",
-       "cols                                                             \n",
-       "propertylandusedesc  object            77381                 0   \n",
+       "                                 dtype  row_values  rows_missing  pct_missing  \\\n",
+       "cols                                                                            \n",
+       "bathroomcnt                    float64       77381             0     0.000000   \n",
+       "bedroomcnt                     float64       77381             0     0.000000   \n",
+       "calculatedbathnbr              float64       76772           609     0.007870   \n",
+       "calculatedfinishedsquarefeet   float64       77185           196     0.002533   \n",
+       "propertylandusetypeid         category       77381             0     0.000000   \n",
+       "propertylandusedesc           category       77381             0     0.000000   \n",
+       "transactions                  category       77381             0     0.000000   \n",
        "\n",
-       "                     pct_rows_missing  num_uniques  \\\n",
-       "cols                                                 \n",
-       "propertylandusedesc               0.0           13   \n",
+       "                              nuniques  \\\n",
+       "cols                                     \n",
+       "bathroomcnt                         22   \n",
+       "bedroomcnt                          16   \n",
+       "calculatedbathnbr                   21   \n",
+       "calculatedfinishedsquarefeet      4972   \n",
+       "propertylandusetypeid               13   \n",
+       "propertylandusedesc                 13   \n",
+       "transactions                         3   \n",
        "\n",
-       "                                                         unique_values  \n",
-       "cols                                                                    \n",
-       "propertylandusedesc  [Single Family Residential, Condominium, Duple...  "
+       "                                                                        uniques  \n",
+       "cols                                                                             \n",
+       "bathroomcnt                   [3.5, 1.0, 2.0, 3.0, 0.0, 2.5, 4.5, 4.0, 5.0, ...  \n",
+       "bedroomcnt                    [4.0, 2.0, 3.0, 0.0, 6.0, 5.0, 1.0, 7.0, 8.0, ...  \n",
+       "calculatedbathnbr             [3.5, 1.0, 2.0, 3.0, nan, 2.5, 4.5, 4.0, 5.0, ...  \n",
+       "calculatedfinishedsquarefeet  [3100.0, 1465.0, 1243.0, 2376.0, 1312.0, 1492....  \n",
+       "propertylandusetypeid         [261.0, 266.0, 246.0, 260.0, 269.0, ..., 31.0,...  \n",
+       "propertylandusedesc           [Single Family Residential, Condominium, Duple...  \n",
+       "transactions                         [1, 2, 3]\n",
+       "Categories (3, int64): [1, 2, 3]  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_strings = get_column_values_stats(\n",
+    "df_strings = prep.get_column_values_stats(\n",
     "    df, \n",
     "    get_cols=df.columns[df.dtypes=='object'],\n",
     "    max_uniques=20000,\n",
