--- a/Linear Regression baseline model.ipynb
+++ b/Linear Regression baseline model.ipynb
@@ -293,7 +293,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "Fit"
+   ]
   },
   {
    "cell_type": "code",
