--- a/kworking_k2.ipynb
+++ b/kworking_k2.ipynb
@@ -3156,7 +3156,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# features_2d(Xc_scaled)"
+    "# features_3d(Xc_scaled)"
    ]
   },
   {
@@ -3253,7 +3253,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# features_3d(X)"
+    "features_3d(X)"
    ]
   },
   {
